internal/parser/kumir_parser.go
// Code generated from KumirParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // KumirParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type KumirParser struct {
	*antlr.BaseParser
}

var KumirParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func kumirparserParserInit() {
	staticData := &KumirParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'\\u0430\\u043B\\u0433'", "'\\u043D\\u0430\\u0447'", "'\\u043A\\u043E\\u043D'",
		"'\\u043D\\u0446'", "", "'\\u043A\\u0446'", "'\\u0435\\u0441\\u043B\\u0438'",
		"'\\u0442\\u043E'", "'\\u0438\\u043D\\u0430\\u0447\\u0435'", "'\\u0432\\u0441\\u0435'",
		"'\\u0432\\u044B\\u0431\\u043E\\u0440'", "'\\u043F\\u0440\\u0438'",
		"'\\u0432\\u044B\\u0432\\u043E\\u0434'", "':='", "'\\u0432\\u044B\\u0445\\u043E\\u0434'",
		"'\\u0434\\u043B\\u044F'", "'\\u043F\\u043E\\u043A\\u0430'", "'\\u0440\\u0430\\u0437'",
		"'\\u043E\\u0442'", "'\\u0434\\u043E'", "'\\u0448\\u0430\\u0433'", "'\\u043D\\u0441'",
		"'\\u043D\\u0435'", "'\\u0438'", "'\\u0438\\u043B\\u0438'", "'\\u0440\\u0435\\u0437'",
		"'\\u0430\\u0440\\u0433'", "", "'\\u0437\\u043D\\u0430\\u0447'", "'\\u0446\\u0435\\u043B'",
		"'\\u0432\\u0435\\u0449'", "'\\u043B\\u043E\\u0433'", "'\\u0441\\u0438\\u043C'",
		"'\\u043B\\u0438\\u0442'", "'\\u0442\\u0430\\u0431'", "", "", "", "",
		"", "'\\u0434\\u0430'", "'\\u043D\\u0435\\u0442'", "'**'", "", "", "",
		"'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'('", "')'", "'['",
		"']'", "'{'", "'}'", "','", "':'", "';'", "'div'", "'mod'",
	}
	staticData.SymbolicNames = []string{
		"", "ALG_HEADER", "ALG_BEGIN", "ALG_END", "LOOP", "ENDLOOP_COND", "ENDLOOP",
		"IF", "THEN", "ELSE", "FI", "SWITCH", "CASE", "OUTPUT", "ASSIGN", "EXIT",
		"FOR", "WHILE", "TIMES", "FROM", "TO", "STEP", "NEWLINE_CONST", "NOT",
		"AND", "OR", "OUT_PARAM", "IN_PARAM", "INOUT_PARAM", "RETURN_VALUE",
		"INTEGER_TYPE", "REAL_TYPE", "BOOLEAN_TYPE", "CHAR_TYPE", "STRING_TYPE",
		"TABLE_SUFFIX", "INTEGER_ARRAY_TYPE", "REAL_ARRAY_TYPE", "CHAR_ARRAY_TYPE",
		"STRING_ARRAY_TYPE", "BOOLEAN_ARRAY_TYPE", "TRUE", "FALSE", "POWER",
		"GE", "LE", "NE", "PLUS", "MINUS", "MUL", "DIV", "EQ", "LT", "GT", "LPAREN",
		"RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "COLON",
		"SEMICOLON", "DIV_OP", "MOD_OP", "CHAR_LITERAL", "STRING", "REAL", "INTEGER",
		"ID", "LINE_COMMENT", "DOC_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"qualifiedIdentifier", "literal", "expressionList", "arrayLiteral",
		"primaryExpression", "argumentList", "indexList", "postfixExpression",
		"unaryExpression", "powerExpression", "multiplicativeExpression", "additiveExpression",
		"relationalExpression", "equalityExpression", "logicalAndExpression",
		"logicalOrExpression", "expression", "typeSpecifier", "basicType", "arrayType",
		"arrayBounds", "variableDeclarationItem", "variableList", "variableDeclaration",
		"globalDeclaration", "globalAssignment", "parameterDeclaration", "parameterList",
		"algorithmNameTokens", "algorithmName", "algorithmHeader", "algorithmBody",
		"statementSequence", "lvalue", "assignmentStatement", "ioArgument",
		"ioArgumentList", "ioStatement", "ifStatement", "caseBlock", "switchStatement",
		"endLoopCondition", "loopSpecifier", "loopStatement", "exitStatement",
		"statement", "algorithmDefinition", "programItem", "program",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// KumirParserInit initializes any static state used to implement KumirParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewKumirParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func KumirParserInit() {
	staticData := &KumirParserParserStaticData
	staticData.once.Do(kumirparserParserInit)
}

// NewKumirParser produces a new parser instance for the optional input antlr.TokenStream.
func NewKumirParser(input antlr.TokenStream) *KumirParser {
	KumirParserInit()
	this := new(KumirParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &KumirParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "KumirParser.g4"

	return this
}

// KumirParser tokens.
const (
	KumirParserEOF                = antlr.TokenEOF
	KumirParserALG_HEADER         = 1
	KumirParserALG_BEGIN          = 2
	KumirParserALG_END            = 3
	KumirParserLOOP               = 4
	KumirParserENDLOOP_COND       = 5
	KumirParserENDLOOP            = 6
	KumirParserIF                 = 7
	KumirParserTHEN               = 8
	KumirParserELSE               = 9
	KumirParserFI                 = 10
	KumirParserSWITCH             = 11
	KumirParserCASE               = 12
	KumirParserOUTPUT             = 13
	KumirParserASSIGN             = 14
	KumirParserEXIT               = 15
	KumirParserFOR                = 16
	KumirParserWHILE              = 17
	KumirParserTIMES              = 18
	KumirParserFROM               = 19
	KumirParserTO                 = 20
	KumirParserSTEP               = 21
	KumirParserNEWLINE_CONST      = 22
	KumirParserNOT                = 23
	KumirParserAND                = 24
	KumirParserOR                 = 25
	KumirParserOUT_PARAM          = 26
	KumirParserIN_PARAM           = 27
	KumirParserINOUT_PARAM        = 28
	KumirParserRETURN_VALUE       = 29
	KumirParserINTEGER_TYPE       = 30
	KumirParserREAL_TYPE          = 31
	KumirParserBOOLEAN_TYPE       = 32
	KumirParserCHAR_TYPE          = 33
	KumirParserSTRING_TYPE        = 34
	KumirParserTABLE_SUFFIX       = 35
	KumirParserINTEGER_ARRAY_TYPE = 36
	KumirParserREAL_ARRAY_TYPE    = 37
	KumirParserCHAR_ARRAY_TYPE    = 38
	KumirParserSTRING_ARRAY_TYPE  = 39
	KumirParserBOOLEAN_ARRAY_TYPE = 40
	KumirParserTRUE               = 41
	KumirParserFALSE              = 42
	KumirParserPOWER              = 43
	KumirParserGE                 = 44
	KumirParserLE                 = 45
	KumirParserNE                 = 46
	KumirParserPLUS               = 47
	KumirParserMINUS              = 48
	KumirParserMUL                = 49
	KumirParserDIV                = 50
	KumirParserEQ                 = 51
	KumirParserLT                 = 52
	KumirParserGT                 = 53
	KumirParserLPAREN             = 54
	KumirParserRPAREN             = 55
	KumirParserLBRACK             = 56
	KumirParserRBRACK             = 57
	KumirParserLBRACE             = 58
	KumirParserRBRACE             = 59
	KumirParserCOMMA              = 60
	KumirParserCOLON              = 61
	KumirParserSEMICOLON          = 62
	KumirParserDIV_OP             = 63
	KumirParserMOD_OP             = 64
	KumirParserCHAR_LITERAL       = 65
	KumirParserSTRING             = 66
	KumirParserREAL               = 67
	KumirParserINTEGER            = 68
	KumirParserID                 = 69
	KumirParserLINE_COMMENT       = 70
	KumirParserDOC_COMMENT        = 71
	KumirParserWS                 = 72
)

// KumirParser rules.
const (
	KumirParserRULE_qualifiedIdentifier      = 0
	KumirParserRULE_literal                  = 1
	KumirParserRULE_expressionList           = 2
	KumirParserRULE_arrayLiteral             = 3
	KumirParserRULE_primaryExpression        = 4
	KumirParserRULE_argumentList             = 5
	KumirParserRULE_indexList                = 6
	KumirParserRULE_postfixExpression        = 7
	KumirParserRULE_unaryExpression          = 8
	KumirParserRULE_powerExpression          = 9
	KumirParserRULE_multiplicativeExpression = 10
	KumirParserRULE_additiveExpression       = 11
	KumirParserRULE_relationalExpression     = 12
	KumirParserRULE_equalityExpression       = 13
	KumirParserRULE_logicalAndExpression     = 14
	KumirParserRULE_logicalOrExpression      = 15
	KumirParserRULE_expression               = 16
	KumirParserRULE_typeSpecifier            = 17
	KumirParserRULE_basicType                = 18
	KumirParserRULE_arrayType                = 19
	KumirParserRULE_arrayBounds              = 20
	KumirParserRULE_variableDeclarationItem  = 21
	KumirParserRULE_variableList             = 22
	KumirParserRULE_variableDeclaration      = 23
	KumirParserRULE_globalDeclaration        = 24
	KumirParserRULE_globalAssignment         = 25
	KumirParserRULE_parameterDeclaration     = 26
	KumirParserRULE_parameterList            = 27
	KumirParserRULE_algorithmNameTokens      = 28
	KumirParserRULE_algorithmName            = 29
	KumirParserRULE_algorithmHeader          = 30
	KumirParserRULE_algorithmBody            = 31
	KumirParserRULE_statementSequence        = 32
	KumirParserRULE_lvalue                   = 33
	KumirParserRULE_assignmentStatement      = 34
	KumirParserRULE_ioArgument               = 35
	KumirParserRULE_ioArgumentList           = 36
	KumirParserRULE_ioStatement              = 37
	KumirParserRULE_ifStatement              = 38
	KumirParserRULE_caseBlock                = 39
	KumirParserRULE_switchStatement          = 40
	KumirParserRULE_endLoopCondition         = 41
	KumirParserRULE_loopSpecifier            = 42
	KumirParserRULE_loopStatement            = 43
	KumirParserRULE_exitStatement            = 44
	KumirParserRULE_statement                = 45
	KumirParserRULE_algorithmDefinition      = 46
	KumirParserRULE_programItem              = 47
	KumirParserRULE_program                  = 48
)

// IQualifiedIdentifierContext is an interface to support dynamic dispatch.
type IQualifiedIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode

	// IsQualifiedIdentifierContext differentiates from other interfaces.
	IsQualifiedIdentifierContext()
}

type QualifiedIdentifierContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQualifiedIdentifierContext() *QualifiedIdentifierContext {
	var p = new(QualifiedIdentifierContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_qualifiedIdentifier
	return p
}

func InitEmptyQualifiedIdentifierContext(p *QualifiedIdentifierContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_qualifiedIdentifier
}

func (*QualifiedIdentifierContext) IsQualifiedIdentifierContext() {}

func NewQualifiedIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QualifiedIdentifierContext {
	var p = new(QualifiedIdentifierContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KumirParserRULE_qualifiedIdentifier

	return p
}

func (s *QualifiedIdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *QualifiedIdentifierContext) ID() antlr.TerminalNode {
	return s.GetToken(KumirParserID, 0)
}

func (s *QualifiedIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QualifiedIdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QualifiedIdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.EnterQualifiedIdentifier(s)
	}
}

func (s *QualifiedIdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.ExitQualifiedIdentifier(s)
	}
}

func (s *QualifiedIdentifierContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KumirParserVisitor:
		return t.VisitQualifiedIdentifier(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KumirParser) QualifiedIdentifier() (localctx IQualifiedIdentifierContext) {
	localctx = NewQualifiedIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KumirParserRULE_qualifiedIdentifier)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(98)
		p.Match(KumirParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILiteralContext is an interface to support dynamic dispatch.
type ILiteralContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INTEGER() antlr.TerminalNode
	REAL() antlr.TerminalNode
	STRING() antlr.TerminalNode
	CHAR_LITERAL() antlr.TerminalNode
	TRUE() antlr.TerminalNode
	FALSE() antlr.TerminalNode
	NEWLINE_CONST() antlr.TerminalNode

	// IsLiteralContext differentiates from other interfaces.
	IsLiteralContext()
}

type LiteralContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLiteralContext() *LiteralContext {
	var p = new(LiteralContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_literal
	return p
}

func InitEmptyLiteralContext(p *LiteralContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_literal
}

func (*LiteralContext) IsLiteralContext() {}

func NewLiteralContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LiteralContext {
	var p = new(LiteralContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KumirParserRULE_literal

	return p
}

func (s *LiteralContext) GetParser() antlr.Parser { return s.parser }

func (s *LiteralContext) INTEGER() antlr.TerminalNode {
	return s.GetToken(KumirParserINTEGER, 0)
}

func (s *LiteralContext) REAL() antlr.TerminalNode {
	return s.GetToken(KumirParserREAL, 0)
}

func (s *LiteralContext) STRING() antlr.TerminalNode {
	return s.GetToken(KumirParserSTRING, 0)
}

func (s *LiteralContext) CHAR_LITERAL() antlr.TerminalNode {
	return s.GetToken(KumirParserCHAR_LITERAL, 0)
}

func (s *LiteralContext) TRUE() antlr.TerminalNode {
	return s.GetToken(KumirParserTRUE, 0)
}

func (s *LiteralContext) FALSE() antlr.TerminalNode {
	return s.GetToken(KumirParserFALSE, 0)
}

func (s *LiteralContext) NEWLINE_CONST() antlr.TerminalNode {
	return s.GetToken(KumirParserNEWLINE_CONST, 0)
}

func (s *LiteralContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LiteralContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LiteralContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.EnterLiteral(s)
	}
}

func (s *LiteralContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.ExitLiteral(s)
	}
}

func (s *LiteralContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KumirParserVisitor:
		return t.VisitLiteral(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KumirParser) Literal() (localctx ILiteralContext) {
	localctx = NewLiteralContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KumirParserRULE_literal)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(100)
		_la = p.GetTokenStream().LA(1)

		if !((int64((_la-22)) & ^0x3f) == 0 && ((int64(1)<<(_la-22))&131941396905985) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionListContext is an interface to support dynamic dispatch.
type IExpressionListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllExpression() []IExpressionContext
	Expression(i int) IExpressionContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsExpressionListContext differentiates from other interfaces.
	IsExpressionListContext()
}

type ExpressionListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionListContext() *ExpressionListContext {
	var p = new(ExpressionListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_expressionList
	return p
}

func InitEmptyExpressionListContext(p *ExpressionListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_expressionList
}

func (*ExpressionListContext) IsExpressionListContext() {}

func NewExpressionListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionListContext {
	var p = new(ExpressionListContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = KumirParserRULE_expressionList

	return p
}

func (s *ExpressionListContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionListContext) AllExpression() []IExpressionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionContext); ok {
			len++
		}
	}

	tst := make([]IExpressionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionContext); ok {
			tst[i] = t.(IExpressionContext)
			i++
		}
	}

	return tst
}

func (s *ExpressionListContext) Expression(i int) IExpressionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(KumirParserCOMMA)
}

func (s *ExpressionListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(KumirParserCOMMA, i)
}

func (s *ExpressionListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.EnterExpressionList(s)
	}
}

func (s *ExpressionListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KumirParserListener); ok {
		listenerT.ExitExpressionList(s)
	}
}

func (s *ExpressionListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KumirParserVisitor:
		return t.VisitExpressionList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KumirParser) ExpressionList() (localctx IExpressionListContext) {
	localctx = NewExpressionListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KumirParserRULE_expressionList)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(102)
		p.Expression()
	}
	p.SetState(107)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == KumirParserCOMMA {
		{
			p.SetState(103)
			p.Match(KumirParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(104)
			p.Expression()
		}

		p.SetState(109)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IArrayLiteralContext is an interface to support dynamic dispatch.
type IArrayLiteralContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	ExpressionList() IExpressionListContext

	// IsArrayLiteralContext differentiates from other interfaces.
	IsArrayLiteralContext()
}

type ArrayLiteralContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayLiteralContext() *ArrayLiteralContext {
	var p = new(ArrayLiteralContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_arrayLiteral
	return p
}

func InitEmptyArrayLiteralContext(p *ArrayLiteralContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = KumirParserRULE_arrayLiteral
}

func (*ArrayLiteralContext) IsArrayLiteralContext() {}
